--- a/面试/算法/数组/简单/数组-简单(101-120).md
+++ b/面试/算法/数组/简单/数组-简单(101-120).md
@@ -672,3 +672,661 @@ class Solution {
 }
 ```
 
+## 112.[[1572. 矩阵对角线元素的和](https://leetcode-cn.com/problems/matrix-diagonal-sum/)]
+
+**描述**
+
+给你一个正方形矩阵 `mat`，请你返回矩阵对角线元素的和。
+
+请你返回在矩阵主对角线上的元素和副对角线上且不在主对角线上元素的和。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：mat = [[1,2,3],
+            [4,5,6],
+            [7,8,9]]
+输出：25
+解释：对角线的和为：1 + 5 + 9 + 3 + 7 = 25
+请注意，元素 mat[1][1] = 5 只会被计算一次。
+```
+
+**示例 2：**
+
+```
+输入：mat = [[1,1,1,1],
+            [1,1,1,1],
+            [1,1,1,1],
+            [1,1,1,1]]
+输出：8
+```
+
+**示例 3:**
+
+```
+输入：mat = [[5]]
+输出：5
+```
+
+**提示：**
+
+- `n == mat.length == mat[i].length`
+- `1 <= n <= 100`
+- `1 <= mat[i][j] <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 一次遍历, 分别加两个对角线上的数
+    public int diagonalSum(int[][] mat) {
+        int sum = 0;
+        int len = mat.length;
+        for(int i=0; i<len; i++){
+            if(i == len - i - 1){
+                sum += mat[i][i];
+            }else{
+                sum += (mat[i][i] + mat[i][len - i - 1]); 
+            }
+        }
+        return sum;
+    }
+}
+```
+
+## 113.[[1582. 二进制矩阵中的特殊位置](https://leetcode-cn.com/problems/special-positions-in-a-binary-matrix/)]
+
+**描述**
+
+给你一个大小为 rows x cols 的矩阵 mat，其中 mat[i][j] 是 0 或 1，请返回 矩阵 mat 中特殊位置的数目 。
+
+特殊位置 定义：如果 mat[i][j] == 1 并且第 i 行和第 j 列中的所有其他元素均为 0（行和列的下标均 从 0 开始 ），则位置 (i, j) 被称为特殊位置。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：mat = [[1,0,0],
+            [0,0,1],
+            [1,0,0]]
+输出：1
+解释：(1,2) 是一个特殊位置，因为 mat[1][2] == 1 且所处的行和列上所有其他元素都是 0
+```
+
+**示例 2：**
+
+```
+输入：mat = [[1,0,0],
+            [0,1,0],
+            [0,0,1]]
+输出：3
+解释：(0,0), (1,1) 和 (2,2) 都是特殊位置
+```
+
+**示例 3:**
+
+```
+输入：mat = [[0,0,0,1],
+            [1,0,0,0],
+            [0,1,1,0],
+            [0,0,0,0]]
+输出：2
+```
+
+**提示：**
+
+- rows == mat.length
+- cols == mat[i].length
+- 1 <= rows, cols <= 100
+- mat[i][j] 是 0 或 1
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int numSpecial(int[][] mat) {
+        int count = 0;
+        int len = mat.length;
+        int clen = mat[0].length;
+        for(int i=0; i<len; i++){
+            for(int j=0; j<clen; j++){
+                if(mat[i][j] == 1){
+                    boolean is = true;
+                    for(int m=0; m<len; m++){
+                        if(m !=i && mat[m][j] != 0){
+                            is = false;
+                            break;
+                        }
+                    }
+                    if(is){
+                        for(int m=0; m<clen; m++){
+                            if(m !=j && mat[i][m] != 0){
+                                is = false;
+                                break;
+                            }
+                        }
+                    }
+                    if(is){
+                        count++;
+                    }
+                }
+            }
+        }
+        return count;
+    }
+}
+```
+
+## 114.[[1588. 所有奇数长度子数组的和](https://leetcode-cn.com/problems/sum-of-all-odd-length-subarrays/)]   **难**
+
+**描述**
+
+给你一个正整数数组 arr ，请你计算所有可能的奇数长度子数组的和。
+
+子数组 定义为原数组中的一个连续子序列。
+
+请你返回 arr 中 所有奇数长度子数组的和 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [1,4,2,5,3]
+输出：58
+解释：所有奇数长度子数组和它们的和为：
+[1] = 1
+[4] = 4
+[2] = 2
+[5] = 5
+[3] = 3
+[1,4,2] = 7
+[4,2,5] = 11
+[2,5,3] = 10
+[1,4,2,5,3] = 15
+我们将所有值求和得到 1 + 4 + 2 + 5 + 3 + 7 + 11 + 10 + 15 = 58
+```
+
+**示例 2：**
+
+```
+输入：arr = [1,2]
+输出：3
+解释：总共只有 2 个长度为奇数的子数组，[1] 和 [2]。它们的和为 3 。
+```
+
+**示例 3:**
+
+```
+输入：arr = [10,11,12]
+输出：66
+```
+
+**提示：**
+
+- `1 <= arr.length <= 100`
+- `1 <= arr[i] <= 1000`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 抄的
+    public int sumOddLengthSubarrays(int[] arr) {
+        int length = arr.length, sum = 0;
+        for(int i=0;i<length;i++){  
+            int left = i+1, right = length-i;
+            int left_odd = left/2, right_odd = right/2;
+            int left_even = (left + 1)/2, right_even = (right + 1)/2;
+            sum += arr[i]*(left_odd*right_odd + left_even*right_even);
+        }
+        return sum;
+    }
+}
+```
+
+## 115.[[1608. 特殊数组的特征值](https://leetcode-cn.com/problems/special-array-with-x-elements-greater-than-or-equal-x/)]
+
+**描述**
+
+给你一个非负整数数组 nums 。如果存在一个数 x ，使得 nums 中恰好有 x 个元素 大于或者等于 x ，那么就称 nums 是一个 特殊数组 ，而 x 是该数组的 特征值 。
+
+注意： x 不必 是 nums 的中的元素。
+
+如果数组 nums 是一个 特殊数组 ，请返回它的特征值 x 。否则，返回 -1 。可以证明的是，如果 nums 是特殊数组，那么其特征值 x 是 唯一的 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [3,5]
+输出：2
+解释：有 2 个元素（3 和 5）大于或等于 2 。
+```
+
+**示例 2：**
+
+```
+输入：nums = [0,0]
+输出：-1
+解释：没有满足题目要求的特殊数组，故而也不存在特征值 x 。
+如果 x = 0，应该有 0 个元素 >= x，但实际有 2 个。
+如果 x = 1，应该有 1 个元素 >= x，但实际有 0 个。
+如果 x = 2，应该有 2 个元素 >= x，但实际有 0 个。
+x 不能取更大的值，因为 nums 中只有两个元素。
+```
+
+**示例 3:**
+
+```
+输入：nums = [0,4,3,0,4]
+输出：3
+解释：有 3 个元素大于或等于 3 。
+```
+
+**提示：**
+
+- `1 <= nums.length <= 100`
+- `0 <= nums[i] <= 1000`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 最理想的情况下,  数组长度为n,  有n个数大于n
+    // 不行就将n--,  再次遍历判断
+    // 当n等于0时, 说明没有符合的特征值, 返回-1
+    public int specialArray(int[] nums) {
+        int n = nums.length;
+        while(n > 0){
+            int count = n;
+            for(int num : nums){
+                if(num >= n){
+                    count--;
+                }
+            }
+            if(count == 0){
+                break;
+            }else{
+                n--;
+            }
+        }
+        return n == 0 ? -1 : n;
+    }
+}
+```
+
+## 116.[[1619. 删除某些元素后的数组均值](https://leetcode-cn.com/problems/mean-of-array-after-removing-some-elements/)]
+
+**描述**
+
+给你一个整数数组 `arr` ，请你删除最小 `5%` 的数字和最大 `5%` 的数字后，剩余数字的平均值。
+
+与 **标准答案** 误差在 `10-5` 的结果都被视为正确结果。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [1,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,3]
+输出：2.00000
+解释：删除数组中最大和最小的元素后，所有元素都等于 2，所以平均值为 2 。
+```
+
+**示例 2：**
+
+```
+输入：arr = [6,2,7,5,1,2,0,3,10,2,5,0,5,5,0,8,7,6,8,0]
+输出：4.00000
+```
+
+**示例 3:**
+
+```
+输入：arr = [6,0,7,0,7,5,7,8,3,4,0,7,8,1,6,8,1,1,2,4,8,1,9,5,4,3,8,5,10,8,6,6,1,0,6,10,8,2,3,4]
+输出：4.77778
+```
+
+**提示：**
+
+- `20 <= arr.length <= 1000`
+- `arr.length` 是 `20` 的 **倍数** 
+- `0 <= arr[i] <= 105`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public double trimMean(int[] arr) {
+        Arrays.sort(arr);
+        int len = arr.length;
+        int clen = arr.length / 20;
+        double sum = 0;
+        for(int i=clen; i<len-clen; i++){
+            sum += arr[i];
+        }
+        return sum / (len - 2 * clen);
+    }
+}
+```
+
+## 117.[[1629. 按键持续时间最长的键](https://leetcode-cn.com/problems/slowest-key/)]
+
+**描述**
+
+LeetCode 设计了一款新式键盘，正在测试其可用性。测试人员将会点击一系列键（总计 n 个），每次一个。
+
+给你一个长度为 n 的字符串 keysPressed ，其中 keysPressed[i] 表示测试序列中第 i 个被按下的键。releaseTimes 是一个升序排列的列表，其中 releaseTimes[i] 表示松开第 i 个键的时间。字符串和数组的 下标都从 0 开始 。第 0 个键在时间为 0 时被按下，接下来每个键都 恰好 在前一个键松开时被按下。
+
+测试人员想要找出按键 持续时间最长 的键。第 i 次按键的持续时间为 releaseTimes[i] - releaseTimes[i - 1] ，第 0 次按键的持续时间为 releaseTimes[0] 。
+
+注意，测试期间，同一个键可以在不同时刻被多次按下，而每次的持续时间都可能不同。
+
+请返回按键 持续时间最长 的键，如果有多个这样的键，则返回 按字母顺序排列最大 的那个键。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：releaseTimes = [9,29,49,50], keysPressed = "cbcd"
+输出："c"
+解释：按键顺序和持续时间如下：
+按下 'c' ，持续时间 9（时间 0 按下，时间 9 松开）
+按下 'b' ，持续时间 29 - 9 = 20（松开上一个键的时间 9 按下，时间 29 松开）
+按下 'c' ，持续时间 49 - 29 = 20（松开上一个键的时间 29 按下，时间 49 松开）
+按下 'd' ，持续时间 50 - 49 = 1（松开上一个键的时间 49 按下，时间 50 松开）
+按键持续时间最长的键是 'b' 和 'c'（第二次按下时），持续时间都是 20
+'c' 按字母顺序排列比 'b' 大，所以答案是 'c'
+```
+
+**示例 2：**
+
+```
+输入：releaseTimes = [12,23,36,46,62], keysPressed = "spuda"
+输出："a"
+解释：按键顺序和持续时间如下：
+按下 's' ，持续时间 12
+按下 'p' ，持续时间 23 - 12 = 11
+按下 'u' ，持续时间 36 - 23 = 13
+按下 'd' ，持续时间 46 - 36 = 10
+按下 'a' ，持续时间 62 - 46 = 16
+按键持续时间最长的键是 'a' ，持续时间 16
+```
+
+**提示：**
+
+- releaseTimes.length == n
+- keysPressed.length == n
+- 2 <= n <= 1000
+- 1 <= releaseTimes[i] <= 109
+- releaseTimes[i] < releaseTimes[i+1]
+- keysPressed 仅由小写英文字母组成
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public char slowestKey(int[] releaseTimes, String keysPressed) {
+        int max = releaseTimes[0];
+        char ans = keysPressed.charAt(0);
+        for(int i=1; i<releaseTimes.length; i++){
+            int times = releaseTimes[i] - releaseTimes[i-1];
+            if(times > max){
+                max = times;
+                ans = keysPressed.charAt(i);
+            }else if(times == max){
+                ans = (char) Math.max(keysPressed.charAt(i), ans);
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 118.[[1636. 按照频率将数组升序排序](https://leetcode-cn.com/problems/sort-array-by-increasing-frequency/)]
+
+**描述**
+
+给你一个整数数组 `nums` ，请你将数组按照每个值的频率 **升序** 排序。如果有多个值的频率相同，请你按照数值本身将它们 **降序** 排序。 
+
+请你返回排序后的数组。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [1,1,2,2,2,3]
+输出：[3,1,1,2,2,2]
+解释：'3' 频率为 1，'1' 频率为 2，'2' 频率为 3 。
+```
+
+**示例 2：**
+
+```
+输入：nums = [2,3,1,3,2]
+输出：[1,3,3,2,2]
+解释：'2' 和 '3' 频率都为 2 ，所以它们之间按照数值本身降序排序。
+```
+
+**示例 3:**
+
+```
+输入：nums = [-1,1,-6,4,5,-6,1,4,1]
+输出：[5,-1,4,4,-6,-6,1,1,1]
+```
+
+**提示：**
+
+- `1 <= nums.length <= 100`
+- `-100 <= nums[i] <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] frequencySort(int[] nums) {
+        // 先使用桶排序, 将每个数字出现的次数存储到桶中
+        int[] bucket = new int[201];
+        int[] ans = new int[nums.length];
+        for(int num : nums){
+            bucket[num + 100]++;
+        }
+        int start = 0;
+        while(start<nums.length){
+            int min = Integer.MAX_VALUE;
+            int index = 0;
+            // 从桶中找到最小的值, 最小值对应的下标就是对应的数, 值是该数出现的次数
+            for(int i=0; i<bucket.length; i++){
+                if(bucket[i] !=0 && min >= bucket[i]){
+                    min = bucket[i];
+                    index = i;
+                }
+            }
+            // 将数填充到返回数组中
+            for(int i=0; i<min; i++){
+                ans[start++] = index-100;
+            }
+            // 将已被使用的桶清空
+            bucket[index] = 0;
+        }
+        return ans;
+        
+    }
+}
+```
+
+## 119.[[1640. 能否连接形成数组](https://leetcode-cn.com/problems/check-array-formation-through-concatenation/)]
+
+**描述**
+
+给你一个整数数组 arr ，数组中的每个整数 互不相同 。另有一个由整数数组构成的数组 pieces，其中的整数也 互不相同 。请你以 任意顺序 连接 pieces 中的数组以形成 arr 。但是，不允许 对每个数组 pieces[i] 中的整数重新排序。
+
+如果可以连接 pieces 中的数组形成 arr ，返回 true ；否则，返回 false 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [85], pieces = [[85]]
+输出：true
+```
+
+**示例 2：**
+
+```
+输入：arr = [15,88], pieces = [[88],[15]]
+输出：true
+解释：依次连接 [15] 和 [88]
+```
+
+**示例 3:**
+
+```
+输入：arr = [49,18,16], pieces = [[16,18,49]]
+输出：false
+解释：即便数字相符，也不能重新排列 pieces[0]
+```
+
+**提示：**
+
+- 1 <= pieces.length <= arr.length <= 100
+- sum(pieces[i].length) == arr.length
+- 1 <= pieces[i].length <= arr.length
+- 1 <= arr[i], pieces[i][j] <= 100
+- arr 中的整数 互不相同
+- pieces 中的整数 互不相同（也就是说，如果将 pieces 扁平化成一维数组，数组中的所有整数互不相同）
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean canFormArray(int[] arr, int[][] pieces) {
+        // 先转成map存起来
+        Map<Integer, int[]> map = new HashMap<>();
+        for(int[] nums : pieces){
+            map.put(nums[0], nums);
+        }
+        // 遍历, 上map里查, 查出的数组, 进行遍历匹配
+        for(int i=0; i<arr.length;){
+            if(map.containsKey(arr[i])){
+                int[] tmp = map.get(arr[i]);
+                for(int num : tmp){
+                    if(num !=0 && num != arr[i]){
+                        return false;
+                    }
+                    i++;
+                }
+            }else{
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 120.[[1646. 获取生成数组中的最大值](https://leetcode-cn.com/problems/get-maximum-in-generated-array/)]
+
+**描述**
+
+给你一个整数 n 。按下述规则生成一个长度为 n + 1 的数组 nums ：
+
+- nums[0] = 0
+- nums[1] = 1
+- 当 2 <= 2 * i <= n 时，nums[2 * i] = nums[i]
+- 当 2 <= 2 * i + 1 <= n 时，nums[2 * i + 1] = nums[i] + nums[i + 1]
+
+返回生成数组 nums 中的 最大 值。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：n = 7
+输出：3
+解释：根据规则：
+  nums[0] = 0
+  nums[1] = 1
+  nums[(1 * 2) = 2] = nums[1] = 1
+  nums[(1 * 2) + 1 = 3] = nums[1] + nums[2] = 1 + 1 = 2
+  nums[(2 * 2) = 4] = nums[2] = 1
+  nums[(2 * 2) + 1 = 5] = nums[2] + nums[3] = 1 + 2 = 3
+  nums[(3 * 2) = 6] = nums[3] = 2
+  nums[(3 * 2) + 1 = 7] = nums[3] + nums[4] = 2 + 1 = 3
+因此，nums = [0,1,1,2,1,3,2,3]，最大值 3
+```
+
+**示例 2：**
+
+```
+输入：n = 2
+输出：1
+解释：根据规则，nums[0]、nums[1] 和 nums[2] 之中的最大值是 1
+```
+
+**示例 3:**
+
+```
+输入：n = 3
+输出：2
+解释：根据规则，nums[0]、nums[1]、nums[2] 和 nums[3] 之中的最大值是 2
+```
+
+**提示：**
+
+- 0 <= n <= 100
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int getMaximumGenerated(int n) {
+        if(n == 0) return 0;
+        int[] ans = new int[n+1];
+        ans[0] = 0;
+        ans[1] = 1;
+        int max = 1;
+        int k = 1;
+        int y = 2;
+        for(int i=2; i<=n; i++){
+            if(i % 2 == 0){
+                ans[i] = ans[i / 2];
+            }else{
+                ans[i] = ans[k++] + ans[y++];
+            }
+            if(max < ans[i]){
+                max = ans[i];
+            }
+        }
+        return max;
+    }
+}
+```
+
