--- a/面试/算法/排序/简单/排序-简单(1-20).md
+++ b/面试/算法/排序/简单/排序-简单(1-20).md
@@ -483,3 +483,529 @@ class Solution {
 }
 ```
 
+## 11.[[1356. 根据数字二进制下 1 的数目排序](https://leetcode-cn.com/problems/sort-integers-by-the-number-of-1-bits/)]
+
+**描述**
+
+给你一个整数数组 arr 。请你将数组中的元素按照其二进制表示中数字 1 的数目升序排序。
+
+如果存在多个数字二进制中 1 的数目相同，则必须将它们按照数值大小升序排列。
+
+请你返回排序后的数组。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr1 = [2,3,1,3,2,4,6,7,9,2,19], arr2 = [2,1,4,3,9,6]
+输出：[2,2,2,1,4,3,3,9,6,7,19]
+```
+
+**说明：**
+
+- 1 <= arr1.length, arr2.length <= 1000
+- 0 <= arr1[i], arr2[i] <= 1000
+- arr2 中的元素 arr2[i] 各不相同
+- arr2 中的每个元素 arr2[i] 都出现在 arr1 中
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] sortByBits(int[] arr) {
+        for(int i=0; i<arr.length; i++){
+            // 计算出1的个数 * 10001 加上原数, 得到的新数, 1的数量越多越大, 1的数量相同时, 原数越大则新数越大
+            // * 10001的原因是, 用例数字大小的范围是0-10000, 最大值是10000, *的数比10000大即可
+            arr[i] += countOne(arr[i]) * 10001;
+        }
+        // 对新数组排序
+        Arrays.sort(arr);
+        // 对10001取余, 得到原数
+        for(int i=0; i<arr.length; i++){
+            arr[i] %= 10001;
+        }
+        return arr;
+    }
+
+    // 计算2进制下1的个数
+    public int countOne(int num){
+        int count = 0;
+        while(num !=0){
+            num &= num - 1;
+            count++;
+        }
+        return count;
+    }
+}
+```
+
+## 12.[[1370. 上升下降字符串](https://leetcode-cn.com/problems/increasing-decreasing-string/)]
+
+**描述**
+
+给你一个字符串 s ，请你根据下面的算法重新构造字符串：
+
+- 从 s 中选出 最小 的字符，将它 接在 结果字符串的后面。
+- 从 s 剩余字符中选出 最小 的字符，且该字符比上一个添加的字符大，将它 接在 结果字符串后面。
+- 重复步骤 2 ，直到你没法从 s 中选择字符。
+- 从 s 中选出 最大 的字符，将它 接在 结果字符串的后面。
+- 从 s 剩余字符中选出 最大 的字符，且该字符比上一个添加的字符小，将它 接在 结果字符串后面。
+- 重复步骤 5 ，直到你没法从 s 中选择字符。
+
+重复步骤 1 到 6 ，直到 s 中所有字符都已经被选过。
+在任何一步中，如果最小或者最大字符不止一个 ，你可以选择其中任意一个，并将其添加到结果字符串。
+
+请你返回将 s 中字符重新排序后的 结果字符串 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "aaaabbbbcccc"
+输出："abccbaabccba"
+解释：第一轮的步骤 1，2，3 后，结果字符串为 result = "abc"
+第一轮的步骤 4，5，6 后，结果字符串为 result = "abccba"
+第一轮结束，现在 s = "aabbcc" ，我们再次回到步骤 1
+第二轮的步骤 1，2，3 后，结果字符串为 result = "abccbaabc"
+第二轮的步骤 4，5，6 后，结果字符串为 result = "abccbaabccba"
+```
+
+**示例 2：**
+
+```
+输入：s = "rat"
+输出："art"
+解释：单词 "rat" 在上述算法重排序以后变成 "art"
+```
+
+**示例 3：**
+
+```
+输入：s = "leetcode"
+输出："cdelotee"
+```
+
+**说明：**
+
+- `1 <= s.length <= 500`
+- `s` 只包含小写英文字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 桶排序
+    public String sortString(String s) {
+        int[] bucket = new int[26];
+        char[] chars = s.toCharArray();
+        for(char c : chars){
+            bucket[c - 'a']++;
+        }
+        int start = 0;
+        while(start < chars.length){
+            for(int i=0; i<26; i++){
+                if(bucket[i] != 0){
+                    chars[start++] = (char)(i + 'a');
+                    bucket[i]--;
+                }
+            }
+            for(int i=25; i>=0; i--){
+                if(bucket[i] != 0){
+                    chars[start++] = (char)(i + 'a');
+                    bucket[i]--;
+                }
+            }
+        }
+        return new String(chars);
+    }
+}
+```
+
+## 13.[[1403. 非递增顺序的最小子序列](https://leetcode-cn.com/problems/minimum-subsequence-in-non-increasing-order/)]
+
+**描述**
+
+给你一个数组 nums，请你从中抽取一个子序列，满足该子序列的元素之和 严格 大于未包含在该子序列中的各元素之和。
+
+如果存在多个解决方案，只需返回 长度最小 的子序列。如果仍然有多个解决方案，则返回 元素之和最大 的子序列。
+
+与子数组不同的地方在于，「数组的子序列」不强调元素在原数组中的连续性，也就是说，它可以通过从数组中分离一些（也可能不分离）元素得到。
+
+注意，题目数据保证满足所有约束条件的解决方案是 唯一 的。同时，返回的答案应当按 非递增顺序 排列。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [4,3,10,9,8]
+输出：[10,9] 
+解释：子序列 [10,9] 和 [10,8] 是最小的、满足元素之和大于其他各元素之和的子序列。但是 [10,9] 的元素之和最大。 
+```
+
+**示例 2：**
+
+```
+输入：nums = [4,4,7,6,7]
+输出：[7,7,6] 
+解释：子序列 [7,7] 的和为 14 ，不严格大于剩下的其他元素之和（14 = 4 + 4 + 6）。因此，[7,6,7] 是满足题意的最小子序列。注意，元素按非递增顺序返回。 
+```
+
+**示例 3：**
+
+```
+输入：nums = [6]
+输出：[6]
+```
+
+**说明：**
+
+- `1 <= s.length <= 500`
+- `s` 只包含小写英文字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 排序后, 先算出全部的和, 再从后向前取
+    public List<Integer> minSubsequence(int[] nums) {
+        List<Integer> ans = new ArrayList<Integer>();
+        Arrays.sort(nums);
+        int sum = 0;
+        for(int num : nums){
+            sum += num;
+        }
+        int tmp = 0;
+        for(int i=nums.length-1; i>=0; i--){
+            tmp += nums[i];
+            ans.add(nums[i]);
+            if(tmp > sum - tmp){
+                return ans;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 14.[[1491. 去掉最低工资和最高工资后的工资平均值](https://leetcode-cn.com/problems/average-salary-excluding-the-minimum-and-maximum-salary/)]
+
+**描述**
+
+给你一个整数数组 salary ，数组里每个数都是 唯一 的，其中 salary[i] 是第 i 个员工的工资。
+
+请你返回去掉最低工资和最高工资以后，剩下员工工资的平均值。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：salary = [4000,3000,1000,2000]
+输出：2500.00000
+解释：最低工资和最高工资分别是 1000 和 4000 。
+去掉最低工资和最高工资以后的平均工资是 (2000+3000)/2= 2500
+```
+
+**示例 2：**
+
+```
+输入：salary = [1000,2000,3000]
+输出：2000.00000
+解释：最低工资和最高工资分别是 1000 和 3000 。
+去掉最低工资和最高工资以后的平均工资是 (2000)/1= 2000
+```
+
+**示例 3：**
+
+```
+输入：salary = [6000,5000,4000,3000,2000,1000]
+输出：3500.00000
+```
+
+**说明：**
+
+- 3 <= salary.length <= 100
+- 10^3 <= salary[i] <= 10^6
+- salary[i] 是唯一的。
+- 与真实值误差在 10^-5 以内的结果都将视为正确答案。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 找到最大值和最小值, 计算出和
+    public double average(int[] salary) {
+        double max = salary[0];
+        double min = salary[0];
+        double sum = 0;
+        for(int num : salary){
+            sum += num;
+            if(max < num) max = num;
+            if(min > num) min = num;
+        }
+        return (sum - max - min) / (salary.length - 2);
+
+    }
+}
+```
+
+## 15.[[1502. 判断能否形成等差数列](https://leetcode-cn.com/problems/can-make-arithmetic-progression-from-sequence/)]
+
+**描述**
+
+给你一个数字数组 arr 。
+
+如果一个数列中，任意相邻两项的差总等于同一个常数，那么这个数列就称为 等差数列 。
+
+如果可以重新排列数组形成等差数列，请返回 true ；否则，返回 false 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [3,5,1]
+输出：true
+解释：对数组重新排序得到 [1,3,5] 或者 [5,3,1] ，任意相邻两项的差分别为 2 或 -2 ，可以形成等差数列。
+```
+
+**示例 2：**
+
+```
+输入：arr = [1,2,4]
+输出：false
+解释：无法通过重新排序得到等差数列。
+```
+
+**说明：**
+
+- `2 <= arr.length <= 1000`
+- `-10^6 <= arr[i] <= 10^6`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 排序后, 算差值
+    public boolean canMakeArithmeticProgression(int[] arr) {
+        Arrays.sort(arr);
+        int tmp = arr[1] - arr[0];
+        for(int i=2; i<arr.length; i++){
+            if(arr[i] - arr[i-1] != tmp){
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 16.[[1528. 重新排列字符串](https://leetcode-cn.com/problems/shuffle-string/)]
+
+**描述**
+
+给你一个字符串 s 和一个 长度相同 的整数数组 indices 。
+
+请你重新排列字符串 s ，其中第 i 个字符需要移动到 indices[i] 指示的位置。
+
+返回重新排列后的字符串。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "codeleet", indices = [4,5,6,7,0,2,1,3]
+输出："leetcode"
+解释：如图所示，"codeleet" 重新排列后变为 "leetcode" 。
+```
+
+**示例 2：**
+
+```
+输入：s = "abc", indices = [0,1,2]
+输出："abc"
+解释：重新排列后，每个字符都还留在原来的位置上。
+```
+
+**示例 3：**
+
+```
+输入：s = "aiohn", indices = [3,1,4,2,0]
+输出："nihao"
+```
+
+**说明：**
+
+- s.length == indices.length == n
+- 1 <= n <= 100
+- s 仅包含小写英文字母。
+- 0 <= indices[i] < n
+- indices 的所有的值都是唯一的（也就是说，indices 是整数 0 到 n - 1 形成的一组排列）。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String restoreString(String s, int[] indices) {
+        char[] chars = new char[indices.length];
+        int start=0;
+        for(int index : indices){
+            chars[index] = s.charAt(start++);
+        }
+        return new String(chars);
+    }
+}
+```
+
+## 17.[[1636. 按照频率将数组升序排序](https://leetcode-cn.com/problems/sort-array-by-increasing-frequency/)]
+
+**描述**
+
+给你一个整数数组 `nums` ，请你将数组按照每个值的频率 **升序** 排序。如果有多个值的频率相同，请你按照数值本身将它们 **降序** 排序。 
+
+请你返回排序后的数组。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [1,1,2,2,2,3]
+输出：[3,1,1,2,2,2]
+解释：'3' 频率为 1，'1' 频率为 2，'2' 频率为 3 。
+```
+
+**示例 2：**
+
+```
+输入：nums = [2,3,1,3,2]
+输出：[1,3,3,2,2]
+解释：'2' 和 '3' 频率都为 2 ，所以它们之间按照数值本身降序排序。
+```
+
+**示例 3：**
+
+```
+输入：nums = [-1,1,-6,4,5,-6,1,4,1]
+输出：[5,-1,4,4,-6,-6,1,1,1]
+```
+
+**说明：**
+
+- `1 <= nums.length <= 100`
+- `-100 <= nums[i] <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 使用桶排序
+    public int[] frequencySort(int[] nums) {
+        int[] bucket = new int[201];
+        for(int num : nums){
+            bucket[num + 100]++;
+        }
+        int start = 0;
+        while(start < nums.length){
+            int min = Integer.MAX_VALUE;
+            int index = 0;
+            for(int i=0; i<bucket.length; i++){
+                if(bucket[i] != 0 && bucket[i] <= min){
+                    min = bucket[i];
+                    index = i;
+                }
+            }
+            bucket[index] = 0;
+            for(int i=0; i<min; i++){
+                nums[start++] = index-100;
+            }
+        }
+        return nums;
+    }
+}
+```
+
+## 18.[[1640. 能否连接形成数组](https://leetcode-cn.com/problems/check-array-formation-through-concatenation/)]
+
+**描述**
+
+给你一个整数数组 arr ，数组中的每个整数 互不相同 。另有一个由整数数组构成的数组 pieces，其中的整数也 互不相同 。请你以 任意顺序 连接 pieces 中的数组以形成 arr 。但是，不允许 对每个数组 pieces[i] 中的整数重新排序。
+
+如果可以连接 pieces 中的数组形成 arr ，返回 true ；否则，返回 false 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：arr = [85], pieces = [[85]]
+输出：true
+```
+
+**示例 2：**
+
+```
+输入：arr = [15,88], pieces = [[88],[15]]
+输出：true
+解释：依次连接 [15] 和 [88]
+```
+
+**示例 3：**
+
+```
+输入：arr = [49,18,16], pieces = [[16,18,49]]
+输出：false
+解释：即便数字相符，也不能重新排列 pieces[0]
+```
+
+**说明：**
+
+- `1 <= nums.length <= 100`
+- `-100 <= nums[i] <= 100`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean canFormArray(int[] arr, int[][] pieces) {
+        Map<Integer, int[]> map = new HashMap();
+        for(int[] tmp : pieces){
+            map.put(tmp[0], tmp);
+        }
+        for(int i=0; i<arr.length;){
+            if(!map.containsKey(arr[i])){
+                return false;
+            }else{
+                int[] tmp = map.get(arr[i]);
+                for(int num : tmp){
+                    if(arr[i++] != num){
+                        return false;
+                    }
+                }
+            }
+        }
+        return true;
+    }   
+}
+```
+
