--- a/面试/算法/栈/简单/栈-简单(1-20).md
+++ b/面试/算法/栈/简单/栈-简单(1-20).md
@@ -535,3 +535,264 @@ class Solution {
 }
 ```
 
+## 9.[[1047. 删除字符串中的所有相邻重复项](https://leetcode-cn.com/problems/remove-all-adjacent-duplicates-in-string/)]
+
+**描述**
+
+给出由小写字母组成的字符串 S，重复项删除操作会选择两个相邻且相同的字母，并删除它们。
+
+在 S 上反复执行重复项删除操作，直到无法继续删除。
+
+在完成所有重复项删除操作后返回最终的字符串。答案保证唯一。
+
+**示例**
+
+**示例 1：**
+
+```
+输入："abbaca"
+输出："ca"
+解释：
+例如，在 "abbaca" 中，我们可以删除 "bb" 由于两字母相邻且相同，这是此时唯一可以执行删除操作的重复项。之后我们得到字符串 "aaca"，其中又只有 "aa" 可以执行重复项删除操作，所以最后的字符串为 "ca"。
+```
+
+**提示：**
+
+1. `1 <= S.length <= 20000`
+2. `S` 仅由小写英文字母组成。
+
+**Java**
+
+```java
+class Solution {
+    public String removeDuplicates(String S) {
+        Stack<Character> stack = new Stack();
+        for(char c : S.toCharArray()){
+            if(!stack.isEmpty() && c == stack.peek()){
+                stack.pop();
+            }else{
+                stack.push(c);
+            }
+        }
+        StringBuilder sb = new StringBuilder();
+        for(char c : stack){
+            sb.append(c);
+        }
+        return sb.toString();
+    }
+}
+```
+
+## 10.[[1441. 用栈操作构建数组](https://leetcode-cn.com/problems/build-an-array-with-stack-operations/)]
+
+**描述**
+
+给你一个目标数组 target 和一个整数 n。每次迭代，需要从  list = {1,2,3..., n} 中依序读取一个数字。
+
+请使用下述操作来构建目标数组 target ：
+
+Push：从 list 中读取一个新元素， 并将其推入数组中。
+Pop：删除数组中的最后一个元素。
+如果目标数组构建完成，就停止读取更多元素。
+题目数据保证目标数组严格递增，并且只包含 1 到 n 之间的数字。
+
+请返回构建目标数组所用的操作序列。
+
+题目数据保证答案是唯一的。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：target = [1,3], n = 3
+输出：["Push","Push","Pop","Push"]
+解释： 
+读取 1 并自动推入数组 -> [1]
+读取 2 并自动推入数组，然后删除它 -> [1]
+读取 3 并自动推入数组 -> [1,3]
+```
+
+**示例 2：**
+
+```
+输入：target = [1,2,3], n = 3
+输出：["Push","Push","Push"]
+```
+
+**示例 3：**
+
+```
+输入：target = [1,2], n = 4
+输出：["Push","Push"]
+解释：只需要读取前 2 个数字就可以停止。
+```
+
+**提示：**
+
+1. `1 <= target.length <= 100`
+2. `1 <= target[i] <= 100`
+3. `1 <= n <= 100`
+4. `target` 是严格递增的
+
+**Java**
+
+```java
+class Solution {
+    public List<String> buildArray(int[] target, int n) {
+        List<String> ans = new ArrayList();
+        int start = 1;
+        for(int num : target){
+            while(num != start){
+                ans.add("Push");
+                ans.add("Pop");
+                start++;
+            }
+            ans.add("Push");
+            start++;
+        }
+        return ans;
+    }
+}
+```
+
+## 11.[[1544. 整理字符串](https://leetcode-cn.com/problems/make-the-string-great/)]
+
+**描述**
+
+给你一个由大小写英文字母组成的字符串 s 。
+
+一个整理好的字符串中，两个相邻字符 s[i] 和 s[i+1]，其中 0<= i <= s.length-2 ，要满足如下条件:
+
+若 s[i] 是小写字符，则 s[i+1] 不可以是相同的大写字符。
+若 s[i] 是大写字符，则 s[i+1] 不可以是相同的小写字符。
+请你将字符串整理好，每次你都可以从字符串中选出满足上述条件的 两个相邻 字符并删除，直到字符串整理好为止。
+
+请返回整理好的 字符串 。题目保证在给出的约束条件下，测试样例对应的答案是唯一的。
+
+注意：空字符串也属于整理好的字符串，尽管其中没有任何字符。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：s = "leEeetcode"
+输出："leetcode"
+解释：无论你第一次选的是 i = 1 还是 i = 2，都会使 "leEeetcode" 缩减为 "leetcode" 。
+```
+
+**示例 2：**
+
+```
+输入：s = "abBAcC"
+输出：""
+解释：存在多种不同情况，但所有的情况都会导致相同的结果。例如：
+"abBAcC" --> "aAcC" --> "cC" --> ""
+"abBAcC" --> "abBA" --> "aA" --> ""
+```
+
+**示例 3：**
+
+```
+输入：s = "s"
+输出："s"
+```
+
+**提示：**
+
+1. `1 <= s.length <= 100`
+2. `s` 只包含小写和大写英文字母
+
+**Java**
+
+```java
+class Solution {
+    public String makeGood(String s) {
+        Stack<Character> stack = new Stack();
+        for(char c : s.toCharArray()){
+            if(!stack.isEmpty() && (c - 32 == stack.peek() || c + 32 == stack.peek())){
+                stack.pop();
+            }else{
+                stack.push(c);
+            }
+        }
+        StringBuilder sb = new StringBuilder();
+        for(char c : stack){
+            sb.append(c);
+        }
+        return sb.toString();
+    }
+}
+```
+
+## 12.[[1598. 文件夹操作日志搜集器](https://leetcode-cn.com/problems/crawler-log-folder/)]
+
+**描述**
+
+每当用户执行变更文件夹操作时，LeetCode 文件系统都会保存一条日志记录。
+
+下面给出对变更操作的说明：
+
+"../" ：移动到当前文件夹的父文件夹。如果已经在主文件夹下，则 继续停留在当前文件夹 。
+"./" ：继续停留在当前文件夹。
+"x/" ：移动到名为 x 的子文件夹中。题目数据 保证总是存在文件夹 x 。
+给你一个字符串列表 logs ，其中 logs[i] 是用户在 ith 步执行的操作。
+
+文件系统启动时位于主文件夹，然后执行 logs 中的操作。
+
+执行完所有变更文件夹操作后，请你找出 返回主文件夹所需的最小步数 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：logs = ["d1/","d2/","../","d21/","./"]
+输出：2
+解释：执行 "../" 操作变更文件夹 2 次，即可回到主文件夹
+```
+
+**示例 2：**
+
+```
+输入：logs = ["d1/","d2/","./","d3/","../","d31/"]
+输出：3
+```
+
+**示例 3：**
+
+```
+输入：logs = ["d1/","../","../","../"]
+输出：0
+```
+
+**提示：**
+
+1. 1 <= logs.length <= 103
+2. 2 <= logs[i].length <= 10
+3. logs[i] 包含小写英文字母，数字，'.' 和 '/'
+4. logs[i] 符合语句中描述的格式
+5. 文件夹名称由小写英文字母和数字组成
+
+**Java**
+
+```java
+class Solution {
+    public int minOperations(String[] logs) {
+        int count = 0;
+        for(String step : logs){
+            if(step.equals("../")){
+                count--;
+                count = count < 0 ? 0 : count;
+            }else if(step.equals("./")){
+                continue;
+            }else{
+                count++;
+            }
+        }
+        return count;
+    }
+}
+```
+
